--- a/Classes/KYCPlatformServiceTest.cls
+++ b/Classes/KYCPlatformServiceTest.cls
@@ -10,15 +10,32 @@ public class KYCPlatformServiceTest {
         testCustomSetting.KYCPlatformInterfaceEnabled__c = true;
         insert testCustomSetting;
         
-        Account account1 = TestDataFactory.createNewAccount();  
-        account1.ShippingCountry = 'United States';
+        Account account1 = TestDataFactory.createAccount('Test Account');  
+        account1.BillingCountry = 'United States';
         insert account1;
         
-        Opportunity opportunity1 = TestDataFactory.createNewOpportunity(account1);
+        Account account2 = TestDataFactory.createAccount('Test Account duplicated-kyc-case');  
+        account2.BillingCountry = 'United States';
+        insert account2;
+        
+        Account account3 = TestDataFactory.createAccount('Test Account negative');  
+        account3.BillingCountry = 'United States';
+        insert account3;
+        
+        Opportunity opportunity1 = TestDataFactory.createOpportunity('Test Opp', account1);
         opportunity1.InvestmentManager__c = account1.Id;
-        opportunity1.EntityType__c = 'General partnership';
-        opportunity1.InitialBURiskAssessment__c = 'Medium';
+        opportunity1.EntityType__c = 'Trust';
         insert opportunity1;
+        
+        Opportunity opportunity2 = TestDataFactory.createOpportunity('Test Opp duplicated-kyc-case', account2);
+        opportunity2.InvestmentManager__c = account2.Id;
+        opportunity2.EntityType__c = 'Trust';
+        insert opportunity2;
+        
+        Opportunity opportunity3 = TestDataFactory.createOpportunity('Test Opp negative', account3);
+        opportunity3.InvestmentManager__c = account3.Id;
+        opportunity3.EntityType__c = 'Trust';
+        insert opportunity3;
         
     }
 
@@ -28,7 +45,7 @@ public class KYCPlatformServiceTest {
         Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
         
         Test.startTest();
-        	String commonCaseId = KYCPlatformService.createCase('Rogers Infraestructure', 'CO', 'Undetermined');
+            String commonCaseId = KYCPlatformService.createCase('Rogers Infrastructure', 'CO', 'Undetermined');
         Test.stopTest();
         
         System.assertEquals('23020', commonCaseId, 'Expected to have a returned Case ID with value 23020');
@@ -43,7 +60,7 @@ public class KYCPlatformServiceTest {
             
         Test.startTest();
             try {
-                String commonCaseId = KYCPlatformService.createCase('Rogers Infraestructure', 'GB', 'Undetermined');
+                String commonCaseId = KYCPlatformService.createCase('Rogers Infrastructure', 'GB', 'Undetermined');
             } catch(Exception ex) {
                 expectedExceptionThrown = true;
             }
@@ -78,7 +95,7 @@ public class KYCPlatformServiceTest {
         
         Test.startTest();
             try {
-                String commonCaseId = KYCPlatformService.createCase('Rogers Infraestructure', null, 'Undetermined');
+                String commonCaseId = KYCPlatformService.createCase('Rogers Infrastructure', null, 'Undetermined');
             } catch(Exception ex) {
                 expectedExceptionThrown = true;
             }
@@ -96,7 +113,7 @@ public class KYCPlatformServiceTest {
         
         Test.startTest();
             try {
-                String commonCaseId = KYCPlatformService.createCase('Rogers Infraestructure', 'CO', null);
+                String commonCaseId = KYCPlatformService.createCase('Rogers Infrastructure', 'CO', null);
             } catch(Exception ex) {
                 expectedExceptionThrown = true;
             }
@@ -112,7 +129,7 @@ public class KYCPlatformServiceTest {
         Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
         
         Test.startTest();
-        	Boolean result = KYCPlatformService.setCaseProperty('23012', 'Custom Test Property', 'High Priority');
+            Boolean result = KYCPlatformService.setCaseProperty('23012', 'Custom Test Property', 'High Priority');
         Test.stopTest();
         
         System.assertEquals(true, result, 'Expected to have a successful response from the server');
@@ -198,7 +215,7 @@ public class KYCPlatformServiceTest {
         Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
         
         Test.startTest();
-        	String result = KYCPlatformService.getCaseDecision('23012');
+            String result = KYCPlatformService.getCaseDecision('23012');
         Test.stopTest();
         
         System.assertEquals('Go', result, 'Expected to have a successful response and a case desicion with value Approved Case');
@@ -247,7 +264,7 @@ public class KYCPlatformServiceTest {
         Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
         
         Test.startTest();
-        	String commonCaseId = KYCPlatformService.createCaseAndSetProperty('Rogers Infraestructure', 'CO', 'Undetermined', 'Custom Test Property', 'High Priority');
+            String commonCaseId = KYCPlatformService.createCaseAndSetProperty('Rogers Infraestructure', 'CO', 'Undetermined', 'Custom Test Property', 'High Priority');
         Test.stopTest();
         
         System.assertEquals('23020', commonCaseId, 'Expected to have a returned Case ID with value 23020');
@@ -263,14 +280,69 @@ public class KYCPlatformServiceTest {
                                                                   Name, 
                                                                   InvestmentManager__r.Name,
                                                                   EntityType__c,
-                                                                  InvestmentManager__r.ShippingCountryCode,
-                                                                  InitialBURiskAssessment__c
-                                                                  FROM Opportunity]);
+                                                                  InvestmentManager__r.BillingCountryCode,
+                                                                  BURiskAssessment__c
+                                                                  FROM Opportunity
+                                                                  WHERE Name = 'Test Opp']);
         
         Test.startTest();
             try {
                 List<Id> idList = new List<Id>(opptyMap.keySet());
-        		KYCPlatformService.createCasesForOpportunities(idList);
+                KYCPlatformService.createCasesForOpportunities(idList);
+            } catch(Exception ex) {
+                expectedExceptionThrown = true;
+            }
+        Test.stopTest();
+        
+        System.AssertEquals(false, expectedExceptionThrown, 'Expected to complete the process without exceptions');
+        
+    }
+    
+    @isTest
+    static void testPositiveCreateCasesForOpportunitiesExistingKYCCase() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        Boolean expectedExceptionThrown = false;
+        Map<Id, Opportunity> opptyMap = new Map<Id, Opportunity>([SELECT Id, 
+                                                                  Name, 
+                                                                  InvestmentManager__r.Name,
+                                                                  EntityType__c,
+                                                                  InvestmentManager__r.BillingCountryCode,
+                                                                  BURiskAssessment__c
+                                                                  FROM Opportunity
+                                                                  WHERE Name = 'Test Opp duplicated-kyc-case']);
+        
+        Test.startTest();
+            try {
+                List<Id> idList = new List<Id>(opptyMap.keySet());
+                KYCPlatformService.createCasesForOpportunities(idList);
+            } catch(Exception ex) {
+                expectedExceptionThrown = true;
+            }
+        Test.stopTest();
+        
+        System.AssertEquals(false, expectedExceptionThrown, 'Expected to complete the process without exceptions');
+        
+    }
+    
+    @isTest
+    static void testPositiveCreateCasesForOpportunitiesNoExistingKYCCase() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        Boolean expectedExceptionThrown = false;
+        Map<Id, Opportunity> opptyMap = new Map<Id, Opportunity>([SELECT Id, 
+                                                                  Name, 
+                                                                  InvestmentManager__r.Name,
+                                                                  EntityType__c,
+                                                                  InvestmentManager__r.BillingCountryCode,
+                                                                  BURiskAssessment__c
+                                                                  FROM Opportunity
+                                                                  WHERE Name = 'Test Opp negative']);
+        
+        Test.startTest();
+            try {
+                List<Id> idList = new List<Id>(opptyMap.keySet());
+                KYCPlatformService.createCasesForOpportunities(idList);
             } catch(Exception ex) {
                 expectedExceptionThrown = true;
             }
@@ -289,20 +361,82 @@ public class KYCPlatformServiceTest {
     }
     
     @isTest
-    static void testPositivegGetCaseDecisionBatchQuery() {
+    static void testPositiveGetCaseDecisionBatch() {
         
         Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
         
-        List<Opportunity> oppList = [SELECT Id FROM Opportunity];
+        List<Opportunity> oppList = [SELECT Id, Name FROM Opportunity WHERE Name = 'Test Opp'];
         oppList[0].KYCCaseID__c = '1111';
         
         Test.startTest();
             KYCPlatformService.getCaseDecisionBatch(oppList);
         Test.stopTest();
         
-        Opportunity resultOppty = [SELECT Id, KYCAssessmentResult__c FROM Opportunity LIMIT 1];
+        Opportunity resultOppty = [SELECT Id, KYCAssessmentResult__c FROM Opportunity WHERE Name = 'Test Opp'];
         String caseDecision = resultOppty.KYCAssessmentResult__c;
         System.assertEquals(false, String.isBlank(caseDecision), 'Expected to have a case decision in the updated opportunity');
+        
+    }
+    
+    @isTest 
+    static void testPositiveCheckExistingCasesForCompany() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        
+        Test.startTest();
+            String commonCaseId = KYCPlatformService.checkExistingCasesForCompany('Rogers Infrastructure -duplicated-kyc-case', 'US');
+        Test.stopTest();
+        
+        System.assertEquals(true, commonCaseId != 'No Existing Case', 'Expected to have a commonCaseId different than 0');
+        
+    }
+    
+    @isTest 
+    static void testNegativeCheckExistingCasesForCompany() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        
+        Test.startTest();
+            String commonCaseId = KYCPlatformService.checkExistingCasesForCompany('Rogers Infrastructure -duplicatedKyc-negative', 'US');
+        Test.stopTest();
+        
+        System.assertEquals('No Existing Case', commonCaseId, 'Expected to have a commonCaseId equals to 0');
+        
+    }
+    
+    @isTest 
+    static void testExceptionCheckExistingCasesForCompany() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        Boolean exceptionOccurred = false;
+        
+        Test.startTest();
+            try {
+                String commonCaseId = KYCPlatformService.checkExistingCasesForCompany('', 'US');
+            } catch(Exception ex) {
+                exceptionOccurred = true;
+            }
+        Test.stopTest();
+        
+        System.assertEquals(true, exceptionOccurred, 'Expected to have an exception because one of the parameters was blank');
+        
+    }
+    
+    @isTest 
+    static void testExceptionNo200CheckExistingCasesForCompany() {
+        
+        Test.setMock(HttpCalloutMock.class, new KYCPlatformMockImpl());
+        Boolean exceptionOccurred = false;
+        
+        Test.startTest();
+            try {
+                String commonCaseId = KYCPlatformService.checkExistingCasesForCompany('~Rogers Infrastructure~', 'US');
+            } catch(Exception ex) {
+                exceptionOccurred = true;
+            }
+        Test.stopTest();
+        
+        System.assertEquals(true, exceptionOccurred, 'Expected to have an exception because the Http response had status 400');
         
     }
         
